# buisbot

./: .gitignore  Dockerfile  README.md  ai_service.py  bot.py  config.py  database.py  docker-compose.yml  main.py  output.txt  packer.py  pyproject.toml  system_prompt.txt  utils.py
